@@ -1042,7 +1042,7 @@ The following example shows how to do so:
 [source, java]
 ----
 @Bean
-public KafkaListenerContainerFactory<?> batchFactory() {
+public KafkaListenerContainerFactory<?, ?> batchFactory() {
     ConcurrentKafkaListenerContainerFactory<Integer, String> factory =
             new ConcurrentKafkaListenerContainerFactory<>();
     factory.setConsumerFactory(consumerFactory());
@@ -2223,6 +2223,22 @@ public ConcurrentMessageListenerContainer<String, String>(
 IMPORTANT: Containers created this way are not added to the endpoint registry.
 They should be created as `@Bean` definitions so that they are registered with the application context.
 
+Starting with version 2.3.4, you can add a `ContainerCustomizer` to the factory to further configure each container after it has been created and configured.
+
+====
+[source, java]
+----
+@Bean
+public KafkaListenerContainerFactory<?, ?> kafkaListenerContainerFactory() {
+    ConcurrentKafkaListenerContainerFactory<Integer, String> factory =
+            new ConcurrentKafkaListenerContainerFactory<>();
+    ...
+    factory.setContainerCustomizer(container -> { /* customize the container */ });
+    return factory;
+}
+----
+====
+
 [[thread-safety]]
 ===== Thread Safety
 
@@ -2877,7 +2893,7 @@ The following example shows how to do so:
 [source, java]
 ----
 @Bean
-public KafkaListenerContainerFactory<?> kafkaJsonListenerContainerFactory() {
+public KafkaListenerContainerFactory<?, ?> kafkaJsonListenerContainerFactory() {
     ConcurrentKafkaListenerContainerFactory<Integer, String> factory =
         new ConcurrentKafkaListenerContainerFactory<>();
     factory.setConsumerFactory(consumerFactory());
@@ -3056,7 +3072,7 @@ The following example creates beans that use this method:
 [source, java]
 ----
 @Bean
-public KafkaListenerContainerFactory<?> kafkaListenerContainerFactory() {
+public KafkaListenerContainerFactory<?, ?> kafkaListenerContainerFactory() {
     ConcurrentKafkaListenerContainerFactory<Integer, String> factory =
             new ConcurrentKafkaListenerContainerFactory<>();
     factory.setConsumerFactory(consumerFactory());
